--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "chart.js": "^4.5.1",
     "firebase": "^11.10.0",
     "ngx-captcha": "^14.0.0",
     "rxjs": "~7.8.0",
